# WindowKickstarter

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
